# glep

./: .gitignore  CMakeLists.txt  README.md
examples/_audio/: CMakeLists.txt
examples/_audio/0_playing_files/: audio_0_playing_files.cpp
examples/_audio/1_audio_effects/: audio_1_audio_effects.cpp
examples/_control/: CMakeLists.txt
examples/_control/0_first_person_controller/: control_0_first_person_controller.cpp
examples/_control/1_automation/: control_1_automation.cpp
examples/_core/: CMakeLists.txt
examples/_core/0_init_window/: core_0_init_window.cpp
examples/_core/10_post_processing/: core_10_post_processing.cpp
examples/_core/1_basic_scene/: core_1_basic_scene.cpp
examples/_core/2_geometry/: core_2_geometry.cpp
examples/_core/3_materials_and_textures/: core_3_materials_and_textures.cpp
examples/_core/4_input/: core_4_input.cpp
examples/_core/5_custom_models/: core_5_custom_models.cpp
examples/_core/6_cube_maps/: core_6_cube_maps.cpp
examples/_core/7_baked_cube_maps/: core_7_baked_cube_maps.cpp
examples/_core/8_lighting/: core_8_lighting.cpp
examples/_core/8a_normal_and_disp_maps/: core_8a_normal_and_disp_maps.cpp
examples/_core/8a_normal_maps/: core_8a_normal_maps.cpp
examples/_core/9_directional_shadows/: core_9_directional_shadows.cpp
examples/_core/9_shadows/: core_9_shadows.cpp
examples/_core/9a_point_shadows/: core_9a_point_shadows.cpp
examples/_core/test/: normal_map.cpp
examples/cmake_template/: CMakeLists.txt
examples/demo/: CMakeLists.txt  GLEP_demo.cpp
examples/res/models/backpack/: backpack.mtl
examples/res/shaders/: 3_materials_color.fs  3_materials_texture.fs  core_10_post_processing.fs
include/GLEP/: audio.hpp  core.hpp
include/GLEP/audio/: audio_buffer.hpp  audio_effect.hpp  audio_engine.hpp  audio_source.hpp
include/GLEP/audio/instruments/: wavetable_synth.hpp
include/GLEP/control/: automation.hpp
include/GLEP/control/automation/: interp_clip.hpp  interp_manager.hpp  interp_sequence.hpp
include/GLEP/control/camera/: first_person.hpp
include/GLEP/core/: buffer_pass.hpp  camera.hpp  color.hpp  cube_map.hpp  framebuffer.hpp  geometry.hpp  input.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  object_component.hpp  renderer.hpp  scene.hpp  scene_object.hpp  shader.hpp  texture.hpp  time.hpp  window.hpp
include/GLEP/core/utility/: export.hpp  file.hpp  math.hpp  opengl.hpp  print.hpp
res/shaders/GLEP/core/: default.vs  pointShadow.fs
res/shaders/GLEP/core/lit/: blinnPhong.fs  lambert.fs  phong.fs
res/shaders/GLEP/core/post/: defaultPass.vs  depthPass.fs  fogPass.fs  grainPass.fs  invertPass.fs  kernelPass.fs  renderPass.fs
res/shaders/GLEP/core/skybox/: skybox.fs  skybox.vs
res/shaders/GLEP/core/unlit/: reflection.fs  refraction.fs  unlit.fs
res/shaders/GLEP/core/utility/: depthBuffer.fs  uv.fs
res/textures/GLEP/core/cube_maps/: default.cubemap
src/audio/: audio_buffer.cpp  audio_effect.cpp  audio_engine.cpp  audio_source.cpp
src/audio/instruments/: synth.cpp
src/control/automation/: interp_manager.cpp  interp_sequence.cpp
src/control/camera/: first_person.cpp
src/core/: buffer_pass.cpp  camera.cpp  color.cpp  cube_map.cpp  framebuffer.cpp  geometry.cpp  input.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  object_component.cpp  renderer.cpp  scene.cpp  scene_object.cpp  shader.cpp  texture.cpp  time.cpp  window.cpp
src/core/utility/: export.cpp  file.cpp  math.cpp  opengl.cpp  print.cpp
